# gbulk

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  build-deb.sh  build-inno.ps1  build-msi.ps1  gbulk.iss  gbulk.wxs  install-windows.ps1  package-lock.json  package.json  uninstall-windows.ps1
.github/workflows/: ci.yml  release.yml
debian/DEBIAN/: control
src/: index.ts  main.rs  types.ts
src/commands/: exec.ts  list.ts  pull-all.ts  submodule-list.ts  submodule-update.ts
src/utils/: git.ts  output.ts  prompt.ts  repos.ts
