[package]
name = "gbulk"
version = "0.1.0"
edition = "2021"
authors = ["Jo Jo <joeystdio@gmail.com>"]
repository = "https://github.com/joeystdio/gbulk"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
indicatif = "0.17"
walkdir = "2.5"
anyhow = "1.0"
colored = "2.1"
